# Misco

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md  data.py  graph.py  prediction.csv  predictions.csv
data/: BP.csv  E.csv  EQNR.csv  REPYF.csv  SHEL.csv  TTE.csv
data/scripts/: graph.py
misco/: Cargo.toml
scripts/: download_data.py  plot_results.py
src/: display.rs  entry.rs  main.rs  network.rs  portfolio.rs  stock.rs
