[package]
name = "Misco"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
rand = "0.9.1"
rand_distr = "0.5.1"
ndarray = { version = "0.16.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"

[features]
train = []
predict = []
test = []
